Improve active widget UI selection

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -266,6 +266,13 @@
   margin-bottom:5px;
 }
 
+.program-stage-button-label{
+  border-radius: 50%;
+  border : 1px solid #97CBFD;
+  text-align: center;
+  padding : 7px 10px;
+}
+
 .item-card-with-no-margin{
   border: 1px solid #E6E6E7;
   border-radius: 0rem;
