Implemnet control for enable and disable button for add events for repeatable stages

--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -50,8 +50,8 @@
     <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
   </div>
 
-  <div *ngIf="programStage.repeatable" class="item-card" (click)="addAnotherEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+  <button *ngIf="programStage.repeatable" [disabled]="!shouldEnableAddRepeatableEvent()" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
     <ion-icon name="add" color="icon-color"></ion-icon>
     Add
-  </div>
+  </button>
 </div>
