Update UI for table on list for tracker and events

--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -4,7 +4,7 @@
 <div *ngIf="!isLoading" class="over-flow-container">
   <!--programStageSections : {{ programStage.programStageSections |json }}<br><br>-->
   <div *ngIf="tableLayout">
-    <table class="table table-bordered" width="99%" >
+    <table class="table table-bordered" width="100%" >
       <thead *ngIf="tableLayout && tableLayout.headers">
       <tr >
         <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
@@ -42,16 +42,20 @@
     </div>
   </div>
 
-  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex -1 )" padding ion-button clear text-center text-capitalize >
-    <ion-icon name="ios-arrow-back-outline" ></ion-icon>
+
+  <div class="item-card-program-stage-section">
+    <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex -1 )" padding ion-button clear text-center text-capitalize >
+      <ion-icon name="ios-arrow-back-outline" ></ion-icon>
+    </div>
+
+    <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" *ngIf="!isLastStage" padding ion-button clear text-center text-capitalize >
+      <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
+    </div>
+
+    <button *ngIf="programStage.repeatable" [disabled]="!shouldEnableAddRepeatableEvent()" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+      <ion-icon name="add" color="icon-color"></ion-icon>
+      Add
+    </button>
   </div>
 
-  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" *ngIf="!isLastStage" padding ion-button clear text-center text-capitalize >
-    <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
-  </div>
-
-  <button *ngIf="programStage.repeatable" [disabled]="!shouldEnableAddRepeatableEvent()" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
-    <ion-icon name="add" color="icon-color"></ion-icon>
-    Add
-  </button>
 </div>
