Improve UI for pagination, align on add new tracked entity

--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -3,9 +3,9 @@
 </div>
 <div *ngIf="!isLoading">
 
-  <div class="item-card-program-stage-section">
-    programStageSections : {{ programStage.programStageSections |json }}
-  </div>
+  <!--<div class="item-card-program-stage-section">-->
+    <!--programStageSections : {{ programStage.programStageSections |json }}-->
+  <!--</div>-->
 
 
   <div>
