Remove delete and add new event on program stage from stages paginations

--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -25,6 +25,18 @@
                 [(currentOpenEvent)]="currentEvents[currentIndex]"
                 [isOpenRow]="'true'"
                 (onChange)="updateData($event)"></tracker-event-container>
+              <div >
+                <button *ngIf="programStage.repeatable" [disabled]="isAddButtonDisabled" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+                  <ion-icon name="add" color="icon-color"></ion-icon>
+                  New event
+                </button>
+                <div float-right>
+                  <div class="item-card" float-start color="danger" (click)="deleteEvent(currentEventId)"  *ngIf="couldEventBeDeleted()" padding ion-button clear text-center text-capitalize >
+                    <ion-icon name="trash" ></ion-icon>
+                    Delete
+                  </div>
+                </div>
+              </div>
             </div>
           </td>
         </tr>
@@ -40,6 +52,18 @@
         [isOpenRow]="'false'"
         (onChange)="updateData($event)"></tracker-event-container>
     </div>
+    <div >
+      <button *ngIf="programStage.repeatable" [disabled]="isAddButtonDisabled" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+        <ion-icon name="add" color="icon-color"></ion-icon>
+        New event
+      </button>
+      <div float-right>
+        <div class="item-card" float-left color="danger"(click)="deleteEvent(currentEventId)"  *ngIf="couldEventBeDeleted()" padding ion-button clear text-center text-capitalize >
+          <ion-icon name="trash" ></ion-icon>
+          Delete
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -50,14 +74,6 @@
 
     <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" *ngIf="!isLastStage" padding ion-button clear text-center text-capitalize >
       <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
-    </div>
-
-    <button *ngIf="programStage.repeatable" [disabled]="isAddButtonDisabled" class="item-card" (click)="addRepeatableEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
-      <ion-icon name="add" color="icon-color"></ion-icon>
-      Add
-    </button>
-    <div class="item-card" color="danger" float-right (click)="deleteEvent(currentEventId)"  *ngIf="couldEventBeDeleted()" padding ion-button clear text-center text-capitalize >
-      <ion-icon name="trash" ></ion-icon>
     </div>
 
   </div>
