Fixing position of delete events button on add stge icon or number on stage selection

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -266,6 +266,17 @@
   margin-bottom:5px;
 }
 
+.icon-color{
+  color: #97CBFD;
+}
+
+//fields color
+.grey-field{
+  background-color: #F4F4F4;
+}
+
+
+
 .program-stage-button-label{
   border-radius: 50%;
   border : 1px solid #97CBFD;
