--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -3,7 +3,7 @@
 </div>
 <div *ngIf="!isLoading" class="over-flow-container">
   <!--programStageSections : {{ programStage.programStageSections |json }}<br><br>-->
-  <div *ngIf="tableLayout">
+  <div *ngIf="tableLayout && tableLayout.headers && tableLayout.headers.length > 0">
     <table class="table table-bordered" width="100%" >
       <thead *ngIf="tableLayout && tableLayout.headers">
       <tr >
