--- a/src/components/text-input-field/text-input-field.html
+++ b/src/components/text-input-field/text-input-field.html
@@ -1,4 +1,4 @@
-<div *ngIf="valueType == 'LONG_TEXT'" [(ngModel)]="inputFieldValue" >
+<div *ngIf="valueType == 'LONG_TEXT'" >
   <ion-item>
     <ion-textarea (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue" ></ion-textarea>
   </ion-item>
