Add manual sync for events and data values

--- a/src/components/upload-data-via-internet/upload-via-internet.html
+++ b/src/components/upload-data-via-internet/upload-via-internet.html
@@ -7,15 +7,15 @@
     <ion-col *ngIf="!showLoadingMessage">
       <ion-item>
         <ion-label>Aggregate data</ion-label>
-        <ion-checkbox [(ngModel)]="selectedItems.dataValues" (ionChange)="updateItemsToUpload()"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="selectedItems.dataValues" disabled = "{{(dataObject.dataValues.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()"></ion-checkbox>
       </ion-item>
       <ion-item>
-        <ion-label>Events Capture data</ion-label>
-        <ion-checkbox [(ngModel)]="selectedItems.events" (ionChange)="updateItemsToUpload()" ></ion-checkbox>
+        <ion-label>Events</ion-label>
+        <ion-checkbox [(ngModel)]="selectedItems.events" disabled = "{{(dataObject.events.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()" ></ion-checkbox>
       </ion-item>
       <ion-item>
-        <ion-label>Tracker Capture data</ion-label>
-        <ion-checkbox [(ngModel)]="selectedItems.tracker" (ionChange)="updateItemsToUpload()" ></ion-checkbox>
+        <ion-label>Tracked Entity instances</ion-label>
+        <ion-checkbox [(ngModel)]="selectedItems.trackedEntityInstances" disabled = "{{(dataObject.trackedEntityInstances.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()" ></ion-checkbox>
       </ion-item>
       <button [disabled]="itemsToUpload.length == 0" ion-button full text-capitalize (tap)="uploadData()">
         Upload Data
