--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -53,6 +53,7 @@ $colors: (
   primary:    #488aff,
   secondary:  #5CB85C,
   border-color: #E6E6E7,
+  badge-color : #E5E5E5,
   danger:     #f53d3d,
   light:      #f4f4f4,
   font-color: #7A7A7A,
