--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -8,41 +8,40 @@
   <!--</div>-->
 
 
-
-  <div>
-    <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
-    <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
-    <span class="required">*</span>
-  </div>
-  <div class="input-field-container">
-    <ion-item>
-      <ion-datetime doneText="Update" (ionChange)="updateEventDate()" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="eventDate"></ion-datetime>
-    </ion-item>
-  </div>
-  <div *ngIf="eventDate && eventDate != ''">
-    <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-      <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
-        <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-          <event-input-container [dataElement]="programStageDataElement.dataElement"
-                                 [currentUser]="currentUser"
-                                 [data]="dataObjectModel"
-                                 [mandatory]="programStageDataElement.compulsory"
-                                 (onChange)="updateData($event)"></event-input-container>
-        </div>
-      </div>
-      <div  *ngIf="canEventBeDeleted()" float-right>
-        <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
-          <ion-icon name="trash" ></ion-icon>&nbsp;
-          Delete
-        </div>
-      </div>
-      <div float-left></div>
-
+  <div class="item-card">
+    <div>
+      <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
+      <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+      <span class="required">*</span>
     </div>
-    <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-      <notification [message]="'Contact system to add data elements'"></notification>
+    <div class="input-field-container">
+      <ion-item>
+        <ion-datetime doneText="Update" (ionChange)="updateEventDate()" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="eventDate"></ion-datetime>
+      </ion-item>
+    </div>
+    <div *ngIf="eventDate && eventDate != ''">
+      <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
+        <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+          <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
+            <event-input-container [dataElement]="programStageDataElement.dataElement"
+                                   [currentUser]="currentUser"
+                                   [data]="dataObjectModel"
+                                   [mandatory]="programStageDataElement.compulsory"
+                                   (onChange)="updateData($event)"></event-input-container>
+          </div>
+        </div>
+        <div  *ngIf="canEventBeDeleted()" float-right>
+          <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
+            <ion-icon name="trash" ></ion-icon>&nbsp;
+            Delete
+          </div>
+        </div>
+        <div float-left></div>
+
+      </div>
+      <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+        <notification [message]="'Contact system to add data elements'"></notification>
+      </div>
     </div>
   </div>
-
-
 </div>
