--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -19,19 +19,29 @@
     </div>
     <div *ngIf="eventDate && eventDate != ''">
       <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
-        <div *ngFor="let programStageSection of programStage.programStageSections">
-          <div class="item-card-program-stage-section" padding>
-            {{ programStageSection.displayName }}
-          </div>
-          <div *ngIf="programStageSection.dataElements">
-            <div *ngFor="let dataElement of programStageSection.dataElements">
-              <event-input-container [dataElement]="dataElement"
-                                     [currentUser]="currentUser"
-                                     [data]="dataObjectModel"
-                                     [mandatory]="'false'"
-                                     (onChange)="updateData($event)"></event-input-container>
-            </div>
-          </div>
+        <div *ngFor="let programStageSection of programStage.programStageSections" padding-bottom>
+          <table width="100%">
+            <tbody>
+              <tr>
+                <td [ngStyle]="{'background-color': '#F4F4F4'}">
+                  {{ programStageSection.displayName }}
+                </td>
+              </tr>
+              <tr *ngIf="programStageSection.dataElements">
+                <td>
+                  <div text-left>
+                    <div *ngFor="let dataElement of programStageSection.dataElements">
+                      <event-input-container [dataElement]="dataElement"
+                                             [currentUser]="currentUser"
+                                             [data]="dataObjectModel"
+                                             [mandatory]="'false'"
+                                             (onChange)="updateData($event)"></event-input-container>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div no-padding>
           <div style="display: inline-block;width: 49.3%">
