Fixing icon size for cancel progress as well as fixing visibility of progress bar title

--- a/src/components/progress-bar/progress-bar.html
+++ b/src/components/progress-bar/progress-bar.html
@@ -8,7 +8,7 @@
       </div>
     </ion-col>
     <ion-col col-1>
-      <ion-icon name="md-close" color="danger"></ion-icon>
+      <img  [src]="cancelIcon"/>
     </ion-col>
   </ion-row>
 </div>
