--- a/src/components/available-local-instance/available-local-instance.html
+++ b/src/components/available-local-instance/available-local-instance.html
@@ -8,7 +8,7 @@
     <ion-row>
       <ion-col >
         <ion-list>
-          <ion-item *ngFor="let localInstance of localInstances" (click)="setCurrentUser(localInstance.currentUser)">
+          <ion-item *ngFor="let localInstance of localInstances" (click)="setCurrentUser(localInstance.currentUser,localInstance.currentLanguage)">
             <span  ion-text >{{localInstance.currentUser.username}}&nbsp;{{ localInstance.name }}</span>
             <ion-icon name="ios-arrow-forward"  item-right ></ion-icon>
           </ion-item>
