--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -22,63 +21,68 @@ ion-modal.inset-modal {
 
 @-webkit-keyframes slideInFromLeft {
   0% {
-    -webkit-transform: translate3d(-100%,0,0);
+    -webkit-transform: translate3d(-100%, 0, 0);
   }
   100% {
-    -webkit-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
   }
 }
 
 @-webkit-keyframes slideInFromRight {
   0% {
-    -webkit-transform: translate3d(100%,0,0);
+    -webkit-transform: translate3d(100%, 0, 0);
   }
   100% {
-    -webkit-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
   }
 }
-.required{
+
+.required {
   color: #f53d3d;
 }
 
 //app icons & titles
-.menu-app-icon-list{
-  width:55%;
+.menu-app-icon-list {
+  width: 55%;
   text-align: center;
   margin: auto;
 }
+
 .menu-app {
   text-align: center;
   font-size: 1.2rem;
   white-space: nowrap;
-  overflow:hidden !important;
+  overflow: hidden !important;
   text-overflow: ellipsis;
 }
 
 //cards
 .card-md h1 {
   font-size: 1.8rem;
-  color : #7A7A7A;
+  color: #7A7A7A;
 }
+
 .card-header-md {
   padding: 16px;
   font-size: 1.7rem;
-  color : #7A7A7A;
+  color: #7A7A7A;
 }
+
 .card-md h2 {
   font-size: 20px;
-  color : #7A7A7A;
+  color: #7A7A7A;
 }
+
 .card-md h3,
 .card-md h4,
 .card-md h5,
 .card-md h6 {
   font-size: 1.7rem;
-  color : #7A7A7A;
+  color: #7A7A7A;
 }
 
 //font label
-.inputLabel{
+.inputLabel {
   padding-bottom: 4px;
   padding-top: 5px;
   margin-bottom: 6px;
@@ -92,7 +96,7 @@ ion-modal.inset-modal {
   color: #757575;
 }
 
-.action-sheet-sub-title{
+.action-sheet-sub-title {
   padding: 0px 16px 17px;
   font-size: 1.8rem;
   text-align: left;
@@ -108,14 +112,17 @@ ion-modal.inset-modal {
 .item-md p {
   font-size: 1.7rem !important;
 }
+
 .item-md h2 {
   font-size: 1.8rem !important;
   font-weight: 300;
 }
+
 //tabs button
 .tabs-md .tab-button {
   font-size: 1.7rem !important;
 }
+
 .tabs-md .tab-button[aria-selected=true] {
   font-size: 1.7rem !important;
 }
@@ -128,7 +135,8 @@ ion-modal.inset-modal {
 .normalButton {
   font-size: 1.7rem !important;
 }
-.dataEntryButton{
+
+.dataEntryButton {
   color: #7A7A7A;
   font-size: 1.7rem !important;
 }
@@ -138,20 +146,22 @@ ion-modal.inset-modal {
 }
 
 //selections
-.selectionLabel{
-  font-size: 1.7rem !important;
-}
-.selectionLabel{
+.selectionLabel {
   font-size: 1.7rem !important;
 }
 
-.selectionHints{
-  word-wrap: break-word!important;
+.selectionLabel {
+  font-size: 1.7rem !important;
+}
+
+.selectionHints {
+  word-wrap: break-word !important;
 }
 
 .list-ios > .item-block:first-child {
   border-top: 0px solid #c8c7cc;
 }
+
 .list-ios > .item-block:last-child, .list-ios > .item-wrapper:last-child .item-block {
   border-bottom: 0px solid #c8c7cc;
 }
@@ -164,249 +174,289 @@ ion-modal.inset-modal {
   border-bottom: 0.5px solid #dedede;
 }
 
-.logo-inside-app{
+.logo-inside-app {
   max-width: 15%;
-  margin:auto;
-}
-.side-menu-icon{
-  width : 1.5rem;
-  height : 1.5rem;
+  margin: auto;
 }
 
-.tracker-pagination-icon{
-  width : 1.2rem;
-  height : 1.2rem;
+.side-menu-icon {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
-.footer-icon{
-  width : 2rem;
-  height : 2rem;
+.tracker-pagination-icon {
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
-.dashboard-item-icon{
+.footer-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.dashboard-item-icon {
   padding-top: 0.3rem;
   padding-right: 0.2rem;
-  width : 1.8rem;
-  height : 1.8rem;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
-.empty-space-padding{
+.empty-space-padding {
   margin-top: 2rem;
 }
 
-
-.side-menu-logo-container{
-  padding-top:10%;
-  padding-bottom:5%;
+.side-menu-logo-container {
+  padding-top: 10%;
+  padding-bottom: 5%;
 }
 
 .logo {
-  padding-top:5%;
+  padding-top: 5%;
   max-width: 25%;
-  margin:auto;
+  margin: auto;
 }
 
-.topSLogan{
-  margin-top:0%;
+.topSLogan {
+  margin-top: 0%;
   text-align: center;
-  margin-bottom:0%;
+  margin-bottom: 0%;
 }
 
 .login {
-  background-color:#1D5288;
+  background-color: #1D5288;
 }
 
-.topSLogan p{
-  color:#82B1FF;
-  text-align:center;
+.topSLogan p {
+  color: #82B1FF;
+  text-align: center;
   font-style: italic;
 }
 
-.bottomSLogan{
+.bottomSLogan {
   text-align: center;
-  margin-bottom:2%;
+  margin-bottom: 2%;
+  margin-top: 0px;
 }
 
-.bottomSLogan p{
+.bottomSLogan p {
   margin: 0px;
 }
 
-.bottom-sLogan-title{
+.bottom-sLogan-title {
   font-style: italic;
   color: #ffffff;
   text-transform: lowercase;
   font-size: 0.8rem;
 }
 
-.translation-codes{
+.round-form-container {
+  background: white;
+  border-radius: 0.3rem;
+}
+
+.circled-btn-border,
+.circled-btn {
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+}
+
+.circled-btn {
+  border-style: none;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, .5);
+  height: 2.2rem;
+  width: 2.2rem;
+  padding-top: 0.2rem;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.circled-btn:hover {
+  background-color: rgba(241, 241, 241, .6);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.translation-codes {
   color: #ffffff;
   text-transform: lowercase;
 }
 
-.translation-codes span{
+.translation-codes span {
   padding: 2px;
 }
 
-.apps-contents{
+.apps-contents {
   border: 0.5px solid #E6E6E7;
   border-radius: 1rem;
   padding: 5px 16px 5px;
 }
-.entry-selection-container{
+
+.entry-selection-container {
   border: 1px solid #E6E6E7;
   border-radius: 0.7rem;
   padding: 5px 10px 5px;
 }
-.entry-selection{
-  padding-top : 1.3rem;
-  padding-bottom : 1.3rem;
+
+.entry-selection {
+  padding-top: 1.3rem;
+  padding-bottom: 1.3rem;
 }
 
-.item-card{
+.item-card {
   border: 1px solid #E6E6E7;
   border-radius: 0.1rem;
   padding: 5px 10px 5px;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.icon-color{
+.icon-color {
   color: #97CBFD;
 }
 
 //fields color
-.grey-field{
+.grey-field {
   background-color: #F4F4F4;
 }
 
-
-
-.program-stage-button-label{
+.program-stage-button-label {
   border-radius: 50%;
-  border : 1px solid #97CBFD;
+  border: 1px solid #97CBFD;
   text-align: center;
-  padding : 0.5rem 0.8rem;
+  padding: 0.5rem 0.8rem;
 }
 
-.program-stage-button-label-active{
+.program-stage-button-label-active {
   border-radius: 50%;
-  border : 1px solid #B9FFB9;
+  border: 1px solid #B9FFB9;
   text-align: center;
-  padding : 0.5rem 0.8rem;
+  padding: 0.5rem 0.8rem;
   margin: auto;
 }
 
-.item-card-with-no-margin{
+.item-card-with-no-margin {
   border: 1px solid #E6E6E7;
   border-radius: 0rem;
   padding: 5px 10px 5px;
-  margin:0px;
+  margin: 0px;
 }
 
-.item-card-program-stage-section{
+.item-card-program-stage-section {
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
   padding: 5px 10px 5px;
   background-color: #F4F4F4;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.item-card-category{
+.item-card-category {
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
   padding: 5px 1px 5px;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.over-flow-container{
-  overflow-x:auto;
+.over-flow-container {
+  overflow-x: auto;
 }
 
-.round-button{
+.round-button {
   border-radius: 64px;
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.item-card-entry-form{
+.item-card-entry-form {
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
   padding: 5px 2px 5px 5px;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.input-field-container{
+.input-field-container {
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-.input-field-container-success{
+.input-field-container-success {
   border: 1px solid #73ad72;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-.input-field-container-saving{
+.input-field-container-saving {
   border: 1px solid #fffe8c;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-.input-field-container-failed{
+.input-field-container-failed {
   border: 1px solid #ff8a8a;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-.input-field-container-warning{
+.input-field-container-warning {
   border: 1px solid #ff6600;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-.input-field-container-disabled{
+.input-field-container-disabled {
   border: 1px solid #E6E6E7;
-  background-color:#ccc;
+  background-color: #ccc;
   border-radius: 0.3rem;
-  margin-top:5px;
-  margin-bottom:5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 3px;
 }
 
-
-.pagination-button{
+.pagination-button {
   border-radius: 4rem;
   text-align: center;
   padding: 2.1rem;
   border: 1px solid #E6E6E7;
 }
-.pagination-label{
+
+.pagination-label {
   text-align: center;
   color: #7A7A7A;
   padding-top: 1.5rem;
 }
 
 ion-select {
-  overflow:hidden !important;
+  overflow: hidden !important;
   text-overflow: ellipsis;
   max-width: 100%;
 }
 
-.slide-in-from-left{
+.slide-in-from-left {
   -webkit-animation: slideInFromLeft ease-in 1;
   animation: slideInFromLeft ease-in 1;
   -webkit-animation-fill-mode: forwards;
@@ -427,11 +477,13 @@ ion-select {
 /* Zebra striping */
 .table .table-bordered > thead {
   background: #FBFBFB;
-  overflow:auto;
+  overflow: auto;
 }
+
 th {
   font-weight: bold;
 }
+
 td, th {
   padding: 6px;
   border: 1px solid #E6E6E7;
@@ -439,13 +491,13 @@ td, th {
   min-height: 2.1rem;
 }
 
-.chart-icon{
+.chart-icon {
   width: 30px;
   height: 30px;
   margin: 1px;
 }
 
-.chart-icon-container{
+.chart-icon-container {
   padding: 4px;
   //border-radius: 20px;
 }
