--- a/src/components/available-local-instance/available-local-instance.html
+++ b/src/components/available-local-instance/available-local-instance.html
@@ -1,19 +1,27 @@
-
 <div *ngIf="isLoading">
-  <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
+  <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
 </div>
 <div *ngIf="!isLoading">
-  <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
-      <ion-col >
+      <ion-col col-11>
+        <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
+      </ion-col>
+      <ion-col col-1 (click)="closeContainer()" padding-top>
+        <img [src]="cancelIcon"/>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
         <ion-list>
-          <ion-item *ngFor="let localInstance of localInstances" (click)="setCurrentUser(localInstance.currentUser,localInstance.currentLanguage)">
-            <span  ion-text >{{localInstance.currentUser.username}}&nbsp;{{ localInstance.name }}</span>
-            <ion-icon name="ios-arrow-forward"  item-right ></ion-icon>
+          <ion-item *ngFor="let localInstance of localInstances"
+                    (click)="setCurrentUser(localInstance.currentUser,localInstance.currentLanguage)">
+            <span ion-text>{{localInstance.currentUser.username}}&nbsp;{{ localInstance.name }}</span>
+            <ion-icon name="ios-arrow-forward" item-right></ion-icon>
           </ion-item>
-          <ion-item *ngIf= "localInstances && localInstances.length == 0">
-            <empty-list-notification [emptyListMessage]="'there_is_no_local_instance_to_select'"></empty-list-notification>
+          <ion-item *ngIf="localInstances && localInstances.length == 0">
+            <empty-list-notification
+              [emptyListMessage]="'there_is_no_local_instance_to_select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
