--- a/src/components/progress-bar/progress-bar.html
+++ b/src/components/progress-bar/progress-bar.html
@@ -2,13 +2,24 @@
 
 <div class="progress-outer" no-padding no-margin >
   <ion-row no-padding no-margin (click)="cancelRunningProcess()">
-    <ion-col col-11 no-padding no-margin>
-      <div class="progress-inner" [style.width]="progressBar + '%'">
+    <ion-col col-10 no-padding no-margin>
+      <div class="progress-inner" padding-bottom padding-top [style.width]="progressBar + '%'">
         {{ progressBarTitle }}
       </div>
     </ion-col>
-    <ion-col col-1>
-      <img  [src]="cancelIcon"/>
+
+    <ion-col col-2>
+      <div no-padding no-margin >
+        <div no-padding class="cancel-progress-percentage cancel-button">
+          <img  [src]="cancelIcon"/>
+        </div>
+        <div no-padding no-margin class="percentage cancel-progress-percentage">
+          <div >
+            {{ getPercentage(progressBar) + '%' }}
+          </div>
+        </div>
+      </div>
+
     </ion-col>
   </ion-row>
 </div>
