Adding dashbaord module with store

--- a/src/components/clear-local-data/clear-local-data.html
+++ b/src/components/clear-local-data/clear-local-data.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="isLoading">
-  <page-loading loadingSize="large" [loadingMessage]="loadingMessage"></page-loading>
+  <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
 </div>
 <div *ngIf="!isLoading">
   <ion-row>
