--- a/src/components/download-meta-data/download-meta-data.html
+++ b/src/components/download-meta-data/download-meta-data.html
@@ -22,7 +22,7 @@
     </ion-col>
   </ion-row>
 
-  <span *ngIf="showLoadingMessage" > <page-loading loadingSize="large" [loadingMessage]="updateMetaDataLoadingMessages"></page-loading> </span>
+  <span *ngIf="showLoadingMessage" > <loading loadingSize="large" [loadingMessage]="updateMetaDataLoadingMessages"></loading> </span>
 
   <ion-row *ngIf="!showLoadingMessage">
   <button ion-button style="text-transform: none;"
