--- a/src/components/organisation-unit-tree/organisation-unit-tree.html
+++ b/src/components/organisation-unit-tree/organisation-unit-tree.html
@@ -12,7 +12,7 @@
   <div *ngIf="!(isOrganisationUnitsFetched && hasOrgUnitChildrenLoaded)">
     <ion-item>
       <div style="text-align: center" item-left>
-        <page-loading loadingSize="small"></page-loading>
+        <loading loadingSize="small"></loading>
       </div>
       <span >
         Loading organisation units
