--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -1,5 +1,5 @@
 <div *ngIf="isLoading">
-  <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
+  <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
 </div>
 <div *ngIf="!isLoading" class="over-flow-container">
   <!--programStageSections : {{ programStage.programStageSections |json }}<br><br>-->
