--- a/src/components/upload-data-via-internet/upload-via-internet.html
+++ b/src/components/upload-data-via-internet/upload-via-internet.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="isLoading">
-  <page-loading loadingSize="large" [loadingMessage]="loadingMessage"></page-loading>
+  <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
 </div>
 <div *ngIf="!isLoading">
   <ion-row>
