--- a/src/modules/chart/components/chart-list/chart-list.component.html
+++ b/src/modules/chart/components/chart-list/chart-list.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="">
   <div
-    class="col-12 chart-list"
+    class="chart-list"
     *ngFor="let chartLayer of chartLayers"
   >
     <app-chart-item
