Fixing clear of local data after upgrade services to use observable

--- a/src/components/clear-local-data/clear-local-data.html
+++ b/src/components/clear-local-data/clear-local-data.html
@@ -33,7 +33,7 @@
         </ion-label>
         <ion-checkbox [(ngModel)]="selectedItems.enrollments" disabled = "{{(dataObject.enrollments == 0)?'true':'false'}}" (ionChange)="updateItemsToBeDeleted()" ></ion-checkbox>
       </ion-item>
-      <button [disabled]="itemsToBeDeleted == 0" ion-button full text-capitalize (tap)="deleteSelectedItems()">
+      <button [disabled]="(itemsToBeDeleted == 0)" ion-button full text-capitalize (tap)="deleteSelectedItems()">
         Clear local data
       </button>
     </ion-col>
